# ERP

./: .env.example  .env.server.example  .gitignore  AGENTS.md  CHANGELOG.md  CHECKSUMS.sha256  CLAUDE.md  CODEX.md  CONTRIBUTING.md  IEMS_ERP_DIAGRAMS.doc  MANIFEST.txt  README.md  SECURITY.md  compose.backend.yaml  compose.dev.yaml  compose.yaml  deploy.md  package.json
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: dependencies.py
apps/api/app/core/: abac.py  audit.py  auth.py  config.py  current_user.py  errors.py  logging.py  module_flags.py  rate_limit.py  rbac.py  request_id.py  security_headers.py  supabase_http.py  super_user.py
apps/api/app/schemas/: admin.py  approvals.py  attendance.py  clients_projects.py  current_user.py  director_dashboard.py  employees.py  (+4 more)
apps/api/scripts/: local_access_token.py  perf_probe.py
apps/api/tests/: test_admin_api.py  test_admin_service.py  test_api_docs_exposure.py  test_api_shell.py  test_approvals_api.py  test_approvals_service.py  test_archive_exports_worker.py  test_attendance_api.py  test_attendance_service.py  test_audit_writer.py  test_auth_current_user.py  test_authorization.py  test_clients_projects_api.py  test_clients_projects_service.py  test_director_dashboard_api.py  test_director_dashboard_service.py  test_documents_archive_api.py  test_documents_archive_service.py  test_employee_operations_api.py  test_employee_operations_service.py  test_employees_api.py  test_employees_service.py  test_local_access_token_script.py  test_logging.py  test_me_notifications_api.py  test_module_flags.py  test_perf_probe.py  test_physical_archive_api.py  test_physical_archive_service.py  test_rate_limiting_security_headers.py  test_structured_logging.py  test_supabase_http.py  test_super_user_override.py  test_workers.py
(+302 files in other folders)
