[project]
name = "iems-erp-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = ["fastapi", "uvicorn[standard]", "celery", "redis", "pydantic-settings"]

[dependency-groups]
dev = ["httpx", "mypy", "pytest", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
