[project]
name = "iems-erp-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "celery",
    "redis",
    "pydantic-settings",
    "pyjwt[crypto]>=2.13.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.32",
    "cryptography>=48.0.1",
    "starlette>=1.3.1",
]

[dependency-groups]
dev = [
    "mypy",
    "pip-audit>=2.10.1",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
